chore(E01/P04): finalize backend Sonar and archive
BLOCKER/CRITICAL/MAJOR 잔여 이슈를 0건으로 마무리하고,
E01 Sonar 에픽 문서를 아카이브 구조에 맞게 정리해 종료 상태를 명확히 했습니다.

Refs: E01/P04
Made-with: Cursor