@@ -16,7 +16,6 @@ import org.springframework.util.StringUtils;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -202,6 +201,6 @@ public class ManageArticleService implements ManageArticleUseCase {
                         .techName(techName)
                         .isPrimary(false)
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 }
