@@ -47,7 +47,7 @@ public class Education implements Sortable {
         return techStackMetadata != null ?
                techStackMetadata.stream()
                    .map(TechStackMetadata::getName)
-                   .collect(java.util.stream.Collectors.toList()) :
+                   .toList() :
                new java.util.ArrayList<>();
     }
 
