@@ -61,7 +61,7 @@ public class ProjectRelationshipAdapter implements ProjectRelationshipPort {
         // 3. 기존 관계 중 삭제할 것들 (요청에 없는 것들)
         List<ProjectTechStackJpaEntity> toDelete = existingRelations.stream()
                 .filter(existing -> !requestedIds.contains(existing.getTechStack().getId()))
-                .collect(Collectors.toList());
+                .toList();
 
         if (!toDelete.isEmpty()) {
             log.debug("Deleting {} tech stack relationships", toDelete.size());
@@ -80,7 +80,7 @@ public class ProjectRelationshipAdapter implements ProjectRelationshipPort {
                 ? Collections.emptyList()
                 : relationships.stream()
                         .filter(rel -> !existingIds.contains(rel.techStackId()))
-                        .collect(Collectors.toList());
+                        .toList();
 
         // 6. 추가 실행
         if (!toAdd.isEmpty()) {
